fix: refine portfolio

--- a/portfolio.tex
+++ b/portfolio.tex
@@ -190,39 +190,38 @@
 
         \resumeSubheading
             {Bain \& Company (BCN)}{Jan, 2025 -- Present} 
-            {\uniformunderline{Analyst} $|$ \textnormal{Python, Pandas, SQL, PySpark, FastAPI, Azure, Docker, Plotly-Dash, NextJS } } {On-site}
+            {\uniformunderline{Analyst} $|$ \textnormal{Pandas, SQL, PySpark, FastAPI, Docker, Azure, GCP, Plotly-Dash, NextJS } } {On-site}
             \resumeItemListStart
-                \resumeItem{\normalsize{Built and deployed a Python \& SparkSQL ETL framework on GCP (Dataproc, BigQuery) for a large US retailer, including CI/CD with PyTest and GitHub Actions.}}
-                \resumeItem{\normalsize{Integrated pipeline execution with a client-internal orchestration system, validated in production cloud environments, and led on-site handover sessions (20 hrs).}}
+                \resumeItem{\normalsize{Built and deployed a SparkSQL ETL framework on GCP (Dataproc, BigQuery) for a large US retailer, \newline using PyTest \& GitHub Actions for CI/CD.}}
+                \resumeItem{\normalsize{Integrated ETL pipeline execution with a custom orchestration system, validated across test and production cloud environments, and led on-site handover sessions.}}
                 \resumeItem{\normalsize{Implemented a DuckDB- and SQL-based ETL pipeline for a UK \& Ireland retailer, orchestrating SQL execution via Python for lightweight analytics workloads.}}
-                \resumeItem{\normalsize{Developed dashboards using Python, Pandas, and Plotly-Dash/ReactJS migrating out of Tableau, with a projected savings opportunity of \$200K per annum in licensing costs.}}
-                \resumeItem{\normalsize{Deployed and maintained multiple tools with Docker and Azure. Optimized existing tools' performance (10x latency reduction) and scalability (multi-user support and load balancing).}}
-                \resumeItem{\normalsize{Integated AI into toolkits using OpenAI Chat \& Responses APIs, LangChain, and LangGraph.}}
+                \resumeItem{\normalsize{Developed dashboards using Pandas and Plotly-Dash/ReactJS migrating out of Tableau, resulting in \newline \$200K per annum saved in licensing costs.}}
+                \resumeItem{\normalsize{Deployed and maintained multiple tools with Docker and Azure. Optimized existing tools for performance (10x latency reduction) and scalability (multi-user support and load balancing).}}
+                \resumeItem{\normalsize{Integrated AI into toolkits using OpenAI Chat- \& Responses-APIs, LangChain, and LangGraph.}}
             \resumeItemListEnd
 
         \resumeSubheading
             {Stealth Startup}{June, 2024 -- Dec, 2024} 
-            {\uniformunderline{Freelance} $|$ \textnormal{AWS, Nginx, Docker, Django, PyTest} }{Remote}
+            {\uniformunderline{Freelance} $|$ \textnormal{\href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{AWS, Django, PyTest, Nginx, Docker \footnotesize{\raisebox{-0.05\height}\faExternalLink}}} }{Remote}
             \resumeItemListStart
                 \resumeItem{\normalsize{Provisioned cloud and security infrastructure. Set up API servers and reverse-proxy for different endpoints.}}
-                \resumeItem{\normalsize{Set up a \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{Dockerized, self-hosted Supabase instance \scriptsize{\raisebox{-0.1\height}\faExternalLink}}, with an externally managed Postgres database on a local docker network. Integrated the API service with the database, Supabase Realtime, and Supabase Auth.}}
-                \resumeItem{\normalsize{Created a test suite to unit-test the API using PyTest and Django's testing framework.}}
-            \resumeItemListEnd
-            \vspace{2.5pt}
+                \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{Dockerized and self-hosted a Supabase instance}, with an externally managed Postgres database on a local docker network. Integrated API with Supabase (Database, Realtime, \& Auth) APIs.}} 
+                % \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}
+                \resumeItem{\normalsize{Created a unit-test suite for the API using PyTest and Django's testing framework.}}
+            \resumeItemListEnd  
 
     
         % \resumeSubheading
-        %     {Company Name \href{certificate Link}{\raisebox{-0.1\height}\faExternalLink }}{MM YYYY -- MM YYYY} 
+        %     {Company Name \href{certificate Link}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}{MM YYYY -- MM YYYY} 
         %     {\uniformunderline{Role Name}}{city, country}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{About the role \textbf{and responsibilities carried out.}}}
         %         \resumeItem{\normalsize{About the role \textbf{and responsibilities carried out.}}}
         %         \resumeItem{\normalsize{About the role \textbf{and responsibilities carried out.}}}
         %     \resumeItemListEnd  
-        %     \vspace{2.5pt}
-      
+ 
     \resumeSubHeadingListEnd
-    \vspace{-12.5pt}
+    \vspace{-10pt}
 
 
 
@@ -232,7 +231,7 @@
     \resumeSubHeadingListStart
 
         \resumeProjectHeading
-            {\href{https://github.com/saharshbhansali/bohemian-backend}{\textbf{\large{Decentralized Voting}} \href{https://github.com/saharshbhansali/bohemian-backend}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{FastAPI, PyTest, Docker,  \href{https://colab.research.google.com/github/saharshbhansali/bohemian-referendums/blob/main/ranked-choice.ipynb}{\textbf{Jupyter Notebook}}} \footnotesize{{\raisebox{-0.1\height}\faExternalLink}}}{Sept, 2024 -- Nov, 2024}
+            {\href{https://github.com/saharshbhansali/bohemian-backend}{\textbf{\large{Decentralized Voting}} \footnotesize{\raisebox{-0.1\height}\faExternalLink}} $|$ \normalsize{FastAPI, PyTest, Docker,  \href{https://colab.research.google.com/github/saharshbhansali/bohemian-referendums/blob/main/ranked-choice.ipynb}{\textbf{Jupyter Notebook} \footnotesize{\raisebox{-0.1\height}\faExternalLink}}}}{Sept, 2024 -- Nov, 2024}
             \vspace{-11pt}
             \resumeItemListStart
                 \resumeItem{\normalsize{Built an API for a decentralized referendum platform using alternative voting systems.}} 
@@ -288,13 +287,13 @@
           
         \resumeProjectHeading
             {\textbf{\large{Self-Taught Tinkerer}}\textcolor{blue}{\small{*}}}
-            { }
+            {~}
             \vspace{-11pt}
             \resumeItemListStart 
                 
-                \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/.dotfiles}{\textbf{System Administration}} \href{https://github.com/saharshbhansali/.dotfiles}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}} $|$ Shell Scripting, Chezmoi, GNU Stow, Nix, Ansible: A development setup and streamlined workflow, with automated configuration management, rapidly deployable on multiple platforms.}} \vspace{-11pt} \
+                \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/.dotfiles}{\textbf{System Administration}} \href{https://github.com/saharshbhansali/.dotfiles}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}} $|$ Shell Scripting, Chezmoi, GNU Stow, Nix, Ansible: A development setup and streamlined workflow, with automated configuration management, rapidly deployable on multiple platforms.}} \vspace{-11pt}
                 
-                \resumeItem{\normalsize{\textbf{Home Labs, CTFs, and Bug Bounties} $|$ BurpSuite, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, ReconDog, VirtualBox, ParrotOS, Kali Linux: Learning cyber-security through hands-on exercises.}} \vspace{-11pt} \
+                \resumeItem{\normalsize{\textbf{Home Labs, CTFs, and Bug Bounties} $|$ BurpSuite, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, ReconDog, VirtualBox, ParrotOS, Kali Linux: Learning cyber-security through hands-on exercises.}} \vspace{-11pt}
                 
                 % \resumeItem{\normalsize{\href{https://saharshbhansali.github.io/about-me/}{\textbf{Personal Site}} \href{https://saharshbhansali.github.io/about-me/}{\raisebox{-0.1\height}\faExternalLink} $|$ Jekyll, Markdown, GitHub Pages, LaTeX: A static website to showcase my professional profile and skills.}} \ 
                 
@@ -308,12 +307,13 @@
         %     \vspace{-9pt}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{Linux, Windows, and VPS system configurations and workflows for streamlined administration of personal workspaces.}}
+        
         %         % \resumeItem{\textcolor{accent} {\href{https://github.com/saharshbhansali/.dotfiles/archive/refs/heads/main.zip} {\uniformunderline{\normalsize{Download}}}}}
         %     \resumeItemListEnd
         %     % \vspace{-13pt}
 
     \resumeSubHeadingListEnd
-    \vspace{3.5pt}
+    \vspace{2.5pt}
 
 
 
@@ -328,7 +328,7 @@
             \vspace{0pt}
             \resumeItemListStart
                 
-                % \resumeItem{\normalsize{Organized diverse events and managed projects.}} \\
+                % \resumeItem{\normalsize{Organized diverse events and managed projects.}} \newline
                 % \vspace{-10pt}
                 
                 \resumeItem{\normalsize{Developed questions for the Reverse Coding (RC) contest with 500+ contestants.\textcolor{blue}{\small{*}}}}
@@ -337,7 +337,7 @@
                 \resumeItem{\normalsize{Built CI/CD pipelines for RC using GitHub Actions, Docker, and CMake for multi-platform question binaries.}}
                 \vspace{-10pt}
                 
-                \resumeItem{\normalsize{Facilitated Cryptic Hunt - a 3-day, annual, campus-wide, hybrid treasure hunt, with 700+ participants.}}
+                \resumeItem{\normalsize{Facilitated Cryptic Hunt -- a 3-day, annual, campus-wide, hybrid treasure hunt -- with 700+ participants.}}
                 \vspace{0.5pt}
                 
                 \resumeItem{\normalsize{Speaker and organiser at CodexCryptum, a cryptography and cybersecurity bootcamp, for 2 years.}}
@@ -376,21 +376,17 @@
 %-----------CERTIFICATIONS and ACHIEVEMENTS---------------
 % \section{CERTIFICATIONS AND ACHIEVEMENTS}
 \section{CERTIFICATIONS}
-\vspace{2.5pt}
-\begin{itemize}[leftmargin=0in, label={}]
-\item{
+    \vspace{2.5pt}
     \resumeItemListStart 
-        \resumeItem{\normalsize{\href{https://www.credly.com/badges/dc22fd53-b367-4c97-b2ef-066a59371946/public_url}{\textbf{Solutions Architect Associate (SAA-C03)} - Amazon Web Services (AWS) \footnotesize{{\raisebox{-0.1\height}\faExternalLink }}}}} \vspace{0.5pt}
+        \resumeItem{\normalsize{\href{https://www.credly.com/badges/dc22fd53-b367-4c97-b2ef-066a59371946/public_url}{\textbf{Solutions Architect Associate (SAA-C03)} - Amazon Web Services (AWS) \footnotesize{\raisebox{-0.1\height}\faExternalLink}}}} \vspace{-5pt}
         
-        \resumeItem{\normalsize{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) \footnotesize{{\raisebox{-0.1\height}\faExternalLink }}}}} \vspace{0.5pt}
+        \resumeItem{\normalsize{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) \footnotesize{\raisebox{-0.1\height}\faExternalLink}}}} \vspace{-5pt}
         
-        % \resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}\footnotesize{{\raisebox{-0.1\height}\faExternalLink }}}} \vspace{-3pt}
+        % \resumeItem{\normalsize{\href{https://github.com/kaushalrathi24/funtimeError}{2023 Yantra "Main Hack" - Education Track Winner (Career Node), VIT - Vellore \footnotesize{\raisebox{-0.1\height}\faExternalLink}}}} \vspace{-3pt}
         
         %\resumeItem{\href{certificateLink.com}{Certified Ethical Hacker (CEH) - EC-Council (Pursuing)}} \vspace{-3pt}
     \resumeItemListEnd
-}
-\end{itemize}
-\vspace{-7.5pt}
+    \vspace{-2.5pt}
 
 
 
@@ -414,24 +410,20 @@
 
 
 
-%-----------TECHNICAL SKILLS-----------
+% %-----------TECHNICAL SKILLS-----------
 % \section{TECHNICAL SKILLS}
 %     \vspace{2.5pt}
-%     \begin{itemize}[leftmargin=0in, label={}]
-%         \small{\item{
-%         \resumeItemListStart
+%     \resumeItemListStart
+    
+%         \resumeItem{\textbf{\normalsize{Technologies/Frameworks:}}{ \normalsize{Git, BurpSuite, ZAP, Nessus, Ghidra, Metasploit, Ida, JohnTheRipper, Gobuster, Exiftool, Infoga, ReconDog, Docker, AWS}}} \vspace{-5pt}
         
-%             \resumeItem{\textbf{\normalsize{Technologies/Frameworks:}}{ \normalsize{Git, BurpSuite, ZAP, Nessus, Ghidra, Metasploit, Ida, JohnTheRipper, Gobuster, Exiftool, Infoga, ReconDog, Docker, AWS}}} \vspace{2.5pt} \\
-            
-%             \resumeItem{\textbf{\normalsize{Languages:}}{ \normalsize{Python, Bash and ZSH Scripting, C/C++, Go, Java, JavaScript, TypeScript, SQL, NoSQL, R}}} \vspace{2.5pt} \\
-            
-%             \resumeItem{\textbf{\normalsize{Developer Tools:}}{ \normalsize{VMWare, VirtualBox, Parrot OS and Kali Linux, GitHub}}} \vspace{2.5pt} \\
-            
-%             % \resumeItem{\textbf{\normalsize{Design:}}{ \normalsize{Figma, Photoshop, Illustrator, Canva}}}
-%         \resumeItemListEnd
-%     }}
-%     \end{itemize}
-%     \vspace{-7pt}
+%         \resumeItem{\textbf{\normalsize{Languages:}}{ \normalsize{Python, Bash and ZSH Scripting, C/C++, Go, Java, JavaScript, TypeScript, SQL, NoSQL, R}}} \vspace{-5pt}
+        
+%         \resumeItem{\textbf{\normalsize{Developer Tools:}}{ \normalsize{VMWare, VirtualBox, Parrot OS and Kali Linux, GitHub}}} \vspace{-5pt}
+        
+%         % \resumeItem{\textbf{\normalsize{Design:}}{ \normalsize{Figma, Photoshop, Illustrator, Canva}}}
+%     \resumeItemListEnd
+%     \vspace{-7.5pt}
 
 
 
