fix: change title for stealth startup in PDFs

--- a/curriculum-vitae.tex
+++ b/curriculum-vitae.tex
@@ -202,7 +202,7 @@
 
         \resumeSubheading
             {Stealth Startup}{June, 2024 -- Dec, 2024} 
-            {\uniformunderline{Freelance} $|$ \textnormal{\href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{AWS, Django, PyTest, Nginx, Docker \footnotesize{\raisebox{-0.05\height}\faExternalLink}}} }{Remote}
+            {\uniformunderline{DevOps \& Application Engineer} $|$ \textnormal{\href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{AWS, Django, PyTest, Nginx, Docker \footnotesize{\raisebox{-0.05\height}\faExternalLink}}} }{Remote}
             \resumeItemListStart
                 \resumeItem{\normalsize{Provisioned cloud and security infrastructure. Set up API servers and reverse-proxy for different endpoints.}}
                 \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{Dockerized and self-hosted a Supabase instance}, with an externally managed Postgres database on a local docker network. Integrated API with Supabase (Database, Realtime, \& Auth) APIs.}}
